Buttons are now active only when data is loaded

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       the table.
     </p>
     <button id="randomFetch">Load</button>
-    <button id="sortByLen">Sort by Length</button>
+    <button id="sortByLen" disabled>Sort by Length</button>
     <div>
       <table id="mainTable"></table>
     </div>
     <div class="controls">
-      <button id="prevPageButton">Previous Page</button>
-      <button id="nextPageButton">Next Page</button>
+      <button id="prevPageButton" disabled>Previous Page</button>
+      <button id="nextPageButton" disabled>Next Page</button>
     </div>
     <p id="poemBody"></p>
     <script src="scripts/main.js"></script>
